--- a/code/randall/flask_html_css/lab02_blog/styles.css
+++ b/code/randall/flask_html_css/lab02_blog/styles.css
@@ -2,10 +2,9 @@
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
-  grid-template-rows: 0.1fr 0.1fr 1fr 1fr 1fr 1fr 0.1fr; 
-  grid-gap: .5em;
-  background-color: rgb(240, 240, 30);
+  grid-template-columns: auto; 
+  grid-template-rows: auto 
+
 }
 
 title {
@@ -38,14 +37,13 @@ title {
   font-size: 1.5em;
   font-weight: bold;
 }
+.art1 {
 
-article, {
-  grid-column: 1 / span 8;
-  grid-row: 2 / span 6;
-  padding: 1em;
-  border: 1px solid #006699;
-  background-color: #f0f0f0;
+  background-color: rgb(209, 101, 133);
+  color: #006699;
+  
 }
+
 
 
 header {
