--- a/code/adam/HTML_CSS_FLASK/lab3StoreFront/styles.css
+++ b/code/adam/HTML_CSS_FLASK/lab3StoreFront/styles.css
@@ -1,36 +1,47 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  .container {
-    
-   
-    height: 100vh;
-    background-color: aqua;
-  }
-
-  header {
-    display: flex;
-    justify-content: space-around;
-    background-color: rgb(208, 208, 208);
-    border: 2px solid black;
-    border-radius: 5px;
-  }
-  .lorem {
-    text-align: center;
-  }
-
-  .products {
-   display: flex;
-   justify-content: space-evenly;
-   flex-direction: row;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-    
+.container {
+  height: 100vh;
+  background-color: aqua;
+}
+h1 {
+  font-size: 8rem;
+}
+.links {
+  font-size: 1.5rem;
+} 
+header {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(208, 208, 208);
+  border: 2px solid black;
+  border-radius: 5px;
+}
+.lorem {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.products {
+ display: flex;
+ justify-content: space-evenly;
+ flex-direction: row;
+}
+  
 footer {
-    border: 1px solid black;
-   
-    margin-bottom: 4rem;
+  border: 1px solid black;
+ 
+  margin-bottom: 4rem;
 
 }
-    
+.posts {
+
+  display: flex;
+  font-size: 2rem;
+  justify-content: space-between;
+  border: 1px solid black;
+  width: 140rem;
+}
