--- a/code/randall/flask_html_css/lab03_company/styles.css
+++ b/code/randall/flask_html_css/lab03_company/styles.css
@@ -3,6 +3,30 @@
     color: #fff;
     padding: 100px 25px;
     }
+    a {
+    font-family: 'Bree Serif', serif;
+    }
+    .navbar {
+    margin-bottom: 0;
+    background-color: #3e1ef4;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+    }
+    .navbar li a, .navbar .navbar-brand {
+    color: #fff !important;
+    }
+    .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #f4511e !important;
+    background-color: #fff !important;
+    }
+    .navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
+    }
     .container-fluid {
     padding: 60px 50px;
     }
@@ -47,10 +71,47 @@
     .item span {
     font-style: normal;
     }
+    .panel {
+    border: 1px solid #1e7ef4;
+    border-radius:0;
+    transition: box-shadow 0.5s;
+    }
+    .panel:hover {
+    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+    }
+    .panel-footer .btn:hover {
+    border: 1px solid #1e7ef4;
+    background-color: #fff !important;
+    color: #1e7ef4;
+    }
+    .panel-heading {
+    color: #fff !important;
+    background-color: #1e7ef4 !important;
+    padding: 25px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    }
+    .panel-footer {
+    background-color: #fff !important;
+    }
+    .panel-footer h3 {
+    font-size: 32px;
+    }
+    .panel-footer h4 {
+    color: #aaa;
+    font-size: 14px;
+    }
+    .panel-footer .btn {
+    margin: 15px 0;
+    background-color: #ff0000;
+    color: #fff;
+    }
     @media screen and (max-width: 768px) {
     .col-sm-4 {
     text-align: center;
     margin: 25px 0;
     }
-    }
-    
+    }    
