--- a/code/ashby/html_css_flask/lab_06/templates/index.html
+++ b/code/ashby/html_css_flask/lab_06/templates/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Hello! Welcome to the ROT Cipher encoder!</h1>
     <p>Please input the information below!</p>
-    <form method="post" action="">
+    <form method="post" action="/">
         <input type="text" name="message" placeholder="Input message">
         <input type="text" name="rotation" placeholder="Rotations">
-
+        <button>Encode</button>
     </form>
+    <h2>Your encoded message is {{encoded}}</h2>
 </body>
 </html>
