--- a/code/ashby/html_css_flask/lab_06/templates/index.html
+++ b/code/ashby/html_css_flask/lab_06/templates/index.html
@@ -14,6 +14,7 @@
         <input type="text" name="rotation" placeholder="Rotations">
         <button>Encode</button>
     </form>
+    <p style="color:red; font-weight: 700;">{{error}}</p>
     <h2>Your encoded message is {{encoded}}</h2>
 </body>
 </html>
