added support for yd and in

--- a/code/keenen/flask_css_html/lab06_flask_redo/templates/index.html
+++ b/code/keenen/flask_css_html/lab06_flask_redo/templates/index.html
@@ -16,6 +16,8 @@
                 <option value="mi">Miles</option>
                 <option value="m">Meters</option>
                 <option value="km">Kilometers</option>
+                <option value="yd">Yards</option>
+                <option value="in">Inches</option>
             </select>
               to  
             <select name="unit_output">
@@ -23,6 +25,8 @@
                 <option value="mi">Miles</option>
                 <option value="m">Meters</option>
                 <option value="km">Kilometers</option>
+                <option value="yd">Yards</option>
+                <option value="in">Inches</option>
             </select>
             <button>Submit</button>
         </form>
