added step attribute to the input to address inability to enter float

--- a/code/keenen/flask_css_html/lab06_flask_redo/templates/index.html
+++ b/code/keenen/flask_css_html/lab06_flask_redo/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unit Converter</title>
 </head>
 <body>
     <h1>Unit Converter</h1>
     <p>
         <form action="/" method="post">
-            <input type="number" name="distance" placeholder="Enter distance">
+            <input type="number" step='any' name="distance" placeholder="Enter distance">
             <select name="unit_input">
                 <option value="ft">Feet</option>
                 <option value="mi">Miles</option>
