--- a/code/anthony/django/lecture/django_models/people/templates/people/index.html
+++ b/code/anthony/django/lecture/django_models/people/templates/people/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -5,6 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Friends</title>
+		<link rel="stylesheet" href="{% static 'people/styles.css' %}" />
 	</head>
 	<body>
 		<h1>Welcome to the people app</h1>
@@ -20,7 +23,9 @@
 		</form>
 
 		{% for person in people %}
-		<p>{{person.first_name}} {{person.last_name|default_if_none:""}}</p>
+		<a href="{% url 'person_detail' person.id %}">
+			{{person.first_name}} {{person.last_name|default_if_none:""}}
+		</a>
 		{% endfor %}
 	</body>
 </html>
