Started lab02 project

--- a/code/stacy/django_code/Lecture/django-models/people/templates/people/index.html
+++ b/code/stacy/django_code/Lecture/django-models/people/templates/people/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Friends</title>
+    <link rel="stylesheet" href="{% static 'people/styles.css' %}">
 </head>
 <body>
     <h1> Welcome to the people app </h1>
-
     <form action="{% url 'index' %}" method="POST">
         {% csrf_token %}
         <input name="first_name" type="text" placeholder="First name">
@@ -20,7 +22,7 @@
     </form>
 
     {% for person in people %}
-    <p> {{ person.first_name }} {{ person.last_name|default_if_none:"" }} </p>
+    <a href=" {% url 'person_detail' person.id %} "> {{ person.first_name }} {{ person.last_name|default_if_none:"" }} </a>
     {% endfor %}
 </body>
 </html>
