password app/linked nicely with grocery(not done)

--- a/code/adam/Django/lab2password/templates/navbar.html
+++ b/code/adam/Django/lab2password/templates/navbar.html
@@ -9,5 +9,10 @@
             <h2>Password</h2>
         </a> 
     </div>
+    <div>
+        <a href="{% url 'grocery'%}">
+            <h2>Grocery List</h2>
+        </a>
+    </div>
 </div>   
 <hr>
