--- a/code/adam/Django/lab2password/templates/navbar.html
+++ b/code/adam/Django/lab2password/templates/navbar.html
@@ -10,7 +10,7 @@
         </a> 
     </div>
     <div>
-        <a href="{% url 'grocery'%}">
+        <a href="{% url 'groceries'%}">
             <h2>Grocery List</h2>
         </a>
     </div>
