added block title

--- a/code/adam/Django/lab2password/grocery_list/templates/grocery_list/grocery.html
+++ b/code/adam/Django/lab2password/grocery_list/templates/grocery_list/grocery.html
@@ -1,5 +1,8 @@
 {% extends 'main.html' %}
+{% block title %}Grocery List{% endblock %}
 {% block content %}
+
+
 <h1>Grocery page</h1>
 {% csrf_token %}
 
