--- a/code/adam/Django/lab2password/password/templates/password/pass_gen.html
+++ b/code/adam/Django/lab2password/password/templates/password/pass_gen.html
@@ -1,4 +1,6 @@
 {% extends 'main.html' %}
+{% block title %}Password Generator{% endblock  %}
+
 {% block content %}
 
     <h3>Lets have python make a complex password.</h3>
