--- a/code/adam/Django/lab2password/grocery_list/templates/grocery_list/create_list.html
+++ b/code/adam/Django/lab2password/grocery_list/templates/grocery_list/create_list.html
@@ -1,4 +1,7 @@
 {% extends 'main.html' %}
+{% block title %}Create List{% endblock %}
+
+
 {% block content %}
 <form method="POST" action="">
     {% csrf_token %}
