Added lecture notes

--- a/code/stacy/django_code/Lecture/django-models/assignments/templates/assignments/index.html
+++ b/code/stacy/django_code/Lecture/django-models/assignments/templates/assignments/index.html
@@ -7,8 +7,17 @@
     <title>Assignments</title>
 </head>
 <body>
+    <a href="{% url 'assignments:create' %}">Create new assignment</a>
     {% for item in assignments %}
-    <div>{{item.title}}</div>
+    <div>
+        <h2>{{item.title}}</h2>
+        <p>Due Date: {{item.date_due}} </p>
+        <ul>
+            {% for student in item.students.all %}
+            <li>{{student.name}}</li>
+            {% endfor %}
+        </ul>
+    </div>
     {% endfor %}
 </body>
 </html>
