--- a/code/stacy/django_code/Lecture/django-models/students/templates/students/index.html
+++ b/code/stacy/django_code/Lecture/django-models/students/templates/students/index.html
@@ -9,7 +9,9 @@
 <body>
     {% for student in students %}
     <div>
-        <h2><a href="{% url 'students:detail' student.id %}">  {{student.name}} </a></h2>
+        <h2>
+            <a href="{% url 'students:detail' student.id %}">  {{student.name}} </a>
+        </h2>
         <ul>
             {% for lab in student.assignments.all %}
             <li>{{lab}}</li>
