--- a/code/wesley/django/labs/RPS/templates/RPS/index.html
+++ b/code/wesley/django/labs/RPS/templates/RPS/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to The Rock Paper Scissors Simulator!</h1>
-    <form action="/RPS/" method="POST">
+    <form action="index" method="POST">
         {% csrf_token %}
         <label for="RPS">Make your choice!</label>
         <select name="my_choice">
