--- a/code/adam/Django/lab2password/templates/navbar.html
+++ b/code/adam/Django/lab2password/templates/navbar.html
@@ -14,5 +14,10 @@
             <h2>Grocery List</h2>
         </a>
     </div>
+    <div>
+        <a href="{% url 'todos:index' %}">
+            <h2>ToDo's App</h2>
+        </a>
+    </div>
 </div>   
 <hr>
