--- a/code/adam/Django/lab2password/grocery_list/templates/grocery_list/grocery_list.html
+++ b/code/adam/Django/lab2password/grocery_list/templates/grocery_list/grocery_list.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% block content %}
 <h2>List: {{grocery_list.details}}</h2>
-    {% for item in grocery_list.item.item_name %}
+    {% for item in items %}
         <li>{{item.item_name}}</li>
     {% endfor %}
 
