added base template and fragments

--- a/code/anthony/django/lecture/django_models/users/templates/users/index.html
+++ b/code/anthony/django/lecture/django_models/users/templates/users/index.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Users</title>
-	</head>
-	<body>
-		<h1>Hello {{request.user.username}}</h1>
-		<a href="{% url 'users:signup' %}">signup</a>
-		{% for user in users %}
-		<div>
-			<p>
-				{{user.username}}
-				<!-- no format -->
-				{% if request.user.role == 'admin' %}
-				<!-- no format -->
-				-{{user.role}} {% endif %}
-			</p>
-		</div>
-		{% endfor %}
-	</body>
-</html>
+{% extends 'users/base.html' %}
+<!--  -->
+{% block title %} Users {% endblock %}
+
+<!-- content -->
+{% block content %}
+<!--  -->
+{% include 'users/_navbar.html' %}
+<!-- no format -->
+{% for user in users %}
+<div>
+	<p>
+		{{user.username}}
+		<!-- no format -->
+		{% if request.user.role == 'admin' %}
+		<!-- no format -->
+		-{{user.role}} {% endif %}
+	</p>
+</div>
+{% endfor %}
+<!--  -->
+{% endblock %}
