--- a/code/anthony/django/lecture/django_models/users/templates/users/signup.html
+++ b/code/anthony/django/lecture/django_models/users/templates/users/signup.html
@@ -14,6 +14,7 @@
 			<input type="text" name="username" placeholder="Username:" />
 			<input type="password" name="password" placeholder="Password:" />
 			<button>Sign Up</button>
+			<a href="{% url 'users:login' %}">or login</a>
 		</form>
 	</body>
 </html>
