--- a/code/anthony/django/lecture/django_models/assignments/templates/assignments/index.html
+++ b/code/anthony/django/lecture/django_models/assignments/templates/assignments/index.html
@@ -7,6 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
+		{% include 'users/_navbar.html' %}
 		<a href="{% url 'assignments:create' %}">Create new Assignment</a>
 		{% for item in assignments %}
 		<div>
