finally got items to list out under parent list properly!!!!!!!!!!!!!!!!!

--- a/code/adam/Django/lab2password/grocery_list/templates/grocery_list/grocery.html
+++ b/code/adam/Django/lab2password/grocery_list/templates/grocery_list/grocery.html
@@ -15,7 +15,7 @@
             <a href="{% url 'update-list' list.id %}">Edit</a>
             <a href="{% url 'delete-list' list.id %}">Delete</a>
             <br>
-            <h5>{{list.completed}} --<a href="{% url 'check_list' list.id %}">{{list.details}}</h5>
+            <h5>{{list.completed}} --<a href="{% url 'check-list' list.id %}">{{list.details}}</h5>
            
             <hr>
         </div>
