--- a/code/randall/django/lab03/todo_app/templates/base.html
+++ b/code/randall/django/lab03/todo_app/templates/base.html
@@ -9,6 +9,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
       <title>To-Do List</title>
+      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
    </head>
    <body class="bg-danger">
       <div class="container bg-light rounded m-5 p-2 p-lg-5 mx-auto text-center">
