Updated Django grocery_list lab

--- a/code/adrian/django/labs/grocery_list/templates/grocery_list/index.html
+++ b/code/adrian/django/labs/grocery_list/templates/grocery_list/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,15 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery List</title>
+    <link rel="stylesheet" href="{% static 'grocery_list/styles.css' %}">
 </head>
 <body>
     <a href="{% url 'grocery_list:create' %}"> Add new item </a>
-    {% for item in grocery_list %}
+    {% for item in groceries %}
     <div>
         <h2>{{item.description}}</h2>
         <p>Created on: {{item.date_created|date:"l N dS Y"}}</p>
         <p>Completed on: {{item.date_completed|date:"l N dS Y"}}</p>
-        <button>Completed</button>
+        <a href="{% url 'grocery_list:completed' item.id %}">Completed</a>
+        <a href="{% url 'grocery_list:delete' item.id %}">Delete</a>
     </div>
     {% endfor %}
 </body>
