--- a/code/adrian/django/labs/grocery_list/templates/grocery_list/create.html
+++ b/code/adrian/django/labs/grocery_list/templates/grocery_list/create.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -5,6 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>New Item</title>
+		<link rel="stylesheet" href="{% static 'grocery_list/styles.css' %}">
 	</head>
 	<body>
 		<form action="{% url 'grocery_list:create' %}" method="POST">
