--- a/code/anthony/django/solutions/todo_app/todos/templates/todos/_navbar.html
+++ b/code/anthony/django/solutions/todo_app/todos/templates/todos/_navbar.html
@@ -6,11 +6,11 @@
   <div class="links">
     <!-- If user is logged in, show logout button -->
     {% if not request.user.is_anonymous %}
-    <a href="">logout</a>
+    <a href="{% url 'logout' %}">logout</a>
     {% else %}
     <!-- If no user logged in, show login/signup buttons-->
-    <a href="">login</a>
-    <a href="">signup</a>
+    <a href="{% url 'login' %}">login</a>
+    <a href="{% url 'signup' %}">signup</a>
     {% endif %}
   </div>
 </nav>
