Todo App completed (mostly)

--- a/code/anthony/django/solutions/todo_app/todos/templates/todos/_navbar.html
+++ b/code/anthony/django/solutions/todo_app/todos/templates/todos/_navbar.html
@@ -1,7 +1,7 @@
 
 <nav>
   <h2>
-    <a href="">Todo App</a>
+    <a href="{% url 'index' %}">Todo App</a>
   </h2>
   <div class="links">
     <!-- If user is logged in, show logout button -->
