--- a/code/anthony/django/solutions/todo_app/todos/templates/todos/index.html
+++ b/code/anthony/django/solutions/todo_app/todos/templates/todos/index.html
@@ -6,8 +6,22 @@
 
 {% block content %}
 
+{% include 'todos/_form.html' with path="create" button_text="Add"%}
+
+<h4>Todo:</h4>
 {% for todo in todos %}
-  <p>{{todo.text}}</p>
+  <div>
+    <a href="{% url 'update' todo.id %}">{{todo.text}}</a>
+    <a href="{% url 'delete' todo.id %}">Delete</a>
+  </div>
+{% endfor %}
+
+<h4>Completed:</h4>
+{% for todo in completed %}
+  <div>
+    <a href="{% url 'update' todo.id %}">{{todo.text}}</a>
+    <a href="{% url 'delete' todo.id %}">Delete</a>
+  </div>
 {% endfor %}
 
 {% endblock %}
