--- a/code/stacy/django_code/Lecture/todolab/todos/templates/todos/index.html
+++ b/code/stacy/django_code/Lecture/todolab/todos/templates/todos/index.html
@@ -6,8 +6,22 @@
 
 {% block content %}
 
+{% include 'todos/_form.html' with path='create' button_text='Add Todo' %}
+
+<h4>Todo</h4>
 {% for todo in todos %}
-  <p>{{todo.text}}</p>
+  <div>
+    <p><a href="{% url 'update' todo.id %}">{{todo.text}}</a></p>
+    <a href="{% url 'delete' todo.id %}">Delete</a>
+  </div>
+  
 {% endfor %}
 
+<h4>Completed Todo</h4>
+{% for todo in completed %}
+  <div>
+    <p><a href="{% url 'update' todo.id %}">{{todo.text}}</a></p>
+    <a href="{% url 'delete' todo.id %}">Delete</a>
+  </div>
+{% endfor %}
 {% endblock %}
