--- a/code/stacy/django_code/labs/lab02/grocery_list/templates/grocery_list/index.html
+++ b/code/stacy/django_code/labs/lab02/grocery_list/templates/grocery_list/index.html
@@ -16,15 +16,30 @@
         <label for="">Completed?</label>
         <button>Add</button>
     </form>
+    <ul> Incomplete
+        {% for item in grocery_items %}
+        {% if not item.is_completed %}
+        <li>
+            <a href="{% url 'item_detail' item.id %}">
+                {{item.description}}
+            </a>
+        </li> 
+        {% endif %}
+        {% endfor %}
+    </ul>
 
-    {% for item in grocery_items %}
-    <a href="{% url 'item_detail' item.id %}">
-        {{item.description}} 
-    </a>
-    {% endfor %}
-    {% comment %} Let's create a simple grocery list app.
-This can be done with a single app called grocery_list and model called GroceryItem which contains a text description, a created date, a completed date, and a boolean representing whether it was completed.
 
-The user should be presented with an input field and a button (in a form). When the clicks the button, it should save the data to the server and show the newly-added item in the list. The user should be presented with a list of incomplete items and a list of complete items. THe user should be able to mark an item complete/incomplete and be able to delete an item. {% endcomment %}
+    <ul> Complete
+        {% for item in grocery_items %}
+        {% if item.is_completed %}
+        <li>
+            <a href="{% url 'item_detail' item.id %}">
+                {{item.description}}
+            </a>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+
 </body>
 </html>
