--- a/code/stacy/django_code/labs/lab04/blog/templates/blog/profile.html
+++ b/code/stacy/django_code/labs/lab04/blog/templates/blog/profile.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 
-<h1>Welcome to your profile</h1>
+<h1>Welcome to your profile, {{request.user.username}}</h1>
+{% for post in posts %}
+<p><a href=" {% url 'update' post.id %} ">{{post.title}}</a></p>
+<p>Last Updated: {{post.date_edited}}</p>
+{% endfor %}
 
+<a href=" {% url 'create' %}" >New Post</a>
 {% endblock content %}
