--- a/code/april/django/blog/blog/templates/blog/_navbar.html
+++ b/code/april/django/blog/blog/templates/blog/_navbar.html
@@ -7,6 +7,8 @@
       {% if not request.user.is_anonymous %}
       <a href="{% url 'logout' %}">logout</a>
       <a href="{% url 'profile' %}">Profile</a>
+      <a href="{% url 'create' %}">Create New Post</a>
+
       {% else %}
       
       <a href="{% url 'login' %}">Login</a>
