--- a/code/april/django/blog/blog/templates/blog/base.html
+++ b/code/april/django/blog/blog/templates/blog/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Blog App{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'blog/styles.css' %}">
 </head>
 <body>
     {% include 'blog/_navbar.html' %}
+
+    <br>
     
 	{% block content %}Error{% endblock %}
 </body>
