--- a/code/stacy/django_code/labs/lab02/grocery_list/templates/grocery_list/index.html
+++ b/code/stacy/django_code/labs/lab02/grocery_list/templates/grocery_list/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery List</title>
+    <link rel="stylesheet" href=" {% static 'grocery_list/styles.css' %} ">
 </head>
 <body>
     <h1>Welcome to your Grocery List!</h1>
@@ -33,7 +36,7 @@
         {% for item in grocery_items %}
         {% if item.is_completed %}
         <li>
-            <a href="{% url 'item_detail' item.id %}">
+            <a class="completed" href="{% url 'item_detail' item.id %}">
                 {{item.description}}
             </a>
         </li>
