--- a/code/ashby/Django/blog/templates/blog/profile.html
+++ b/code/ashby/Django/blog/templates/blog/profile.html
@@ -12,15 +12,20 @@
 <div style='display:flex; flex-direction:row;'>
     <div style='width: 50%'>
         <h3 style='display:flex; justify-content:center; margin: 0 auto' >New Post</h3>
-        {% include 'blog/_form.html' with path='blog:create' button_text='Create Post'%}
+
+        <div style = "margin:1rem">{% include 'blog/_form.html' with path='blog:create' button_text='Create Post'%}</div>
     </div>
     <div style= 'width:50%' >
         <h3 style='display:flex; justify-content:center; margin: 0 auto' >My Timeline</h3>
-        <div>
+        <div style = "margin:1rem;">
             {% for post in user_post  %}
             <div>
                 <h4>{{post.title}}</h4>
                 <p>{{post.body}}</p>
+                <div>
+                    <a href=" {% url 'blog:edit' post.id %}">Edit</a>
+                    <a href=" {% url 'blog:delete' post.id %}">Delete</a>
+                </div>
             </div>
             {% endfor %}
         </div>
