Updated lab04 Part 5

--- a/code/stacy/django_code/labs/lab04/blog/static/blog/styles.css
+++ b/code/stacy/django_code/labs/lab04/blog/static/blog/styles.css
@@ -1,4 +1,12 @@
 body {
 
-    background-color: blue;
+    background-color: rgb(50, 221, 27);
+}
+
+.thumbnail {
+        border: 1px solid #ddd; /* Gray border */
+        border-radius: 4px;  /* Rounded border */
+        padding: 5px; /* Some padding */
+        width: 150px; /* Set a small width */
+        height: 150px;
 }
