--- a/code/stacy/django_code/labs/lab04/blog/templates/blog/_form.html
+++ b/code/stacy/django_code/labs/lab04/blog/templates/blog/_form.html
@@ -1,4 +1,4 @@
-<form action="{% url path %}" method="POST">
+<form action="{% url path %}" method="POST" enctype='multipart/form-data'>
     {% csrf_token %}
     {{form.as_p}}
     <button>{{button_text}}</button>
