--- a/code/stacy/django_code/labs/lab04/blog/templates/blog/blogosphere.html
+++ b/code/stacy/django_code/labs/lab04/blog/templates/blog/blogosphere.html
@@ -7,7 +7,10 @@
 
 <div>
     <p>
-    {{blog.title}}
+        {% if blog.image %}
+        <img src=" {{ blog.image.url }}" alt="thumbnail" class="thumbnail">
+        {% endif %}
+        <a href=" {% url 'view_blog' blog.id %}"> {{blog.title}}</a>
     </p>
     <p>
         {{blog.user.username}}
