--- a/code/ashby/Django/blog/templates/blog/detail.html
+++ b/code/ashby/Django/blog/templates/blog/detail.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block content %}
-<div>
+<div style='display:flex; flex-direction:column; justify-content:center; margin: 0 auto; align-items:center;' >
     <div>
         <h1>{{post.title}}</h1>
     </div>
