--- a/code/ashby/Django/blog/templates/blog/profile.html
+++ b/code/ashby/Django/blog/templates/blog/profile.html
@@ -15,7 +15,7 @@
 
         <div style = "margin:1rem">{% include 'blog/_form.html' with path='blog:create' button_text='Create Post'%}</div>
     </div>
-    <div style= 'width:50%' >
+    <div style='width: 50%;' >
         <h3 style='display:flex; justify-content:center; margin: 0 auto' >My Timeline</h3>
         <div style = "margin:1rem;">
             {% for post in user_post  %}
