--- a/code/stacy/django_code/labs/lab04/blog/static/blog/styles.css
+++ b/code/stacy/django_code/labs/lab04/blog/static/blog/styles.css
@@ -1,12 +1,30 @@
 body {
+    text-align: center;
+    align-items: center;
+    background-color: rgb(46, 231, 22);
+}
 
-    background-color: rgb(50, 221, 27);
+.blogosphere_item {
+    display: flex;
+    flex-direction: column;
+}
+
+.blog_post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.updated {
+    font-size: 12px;
 }
 
 .thumbnail {
         border: 1px solid #ddd; /* Gray border */
         border-radius: 4px;  /* Rounded border */
         padding: 5px; /* Some padding */
-        width: 150px; /* Set a small width */
-        height: 150px;
+        width: 50px; /* Set a small width */
+        height: 50px;
 }
