Image uploading complete, image viewing not so complete

--- a/code/ashby/Django/blog/templates/blog/detail.html
+++ b/code/ashby/Django/blog/templates/blog/detail.html
@@ -16,6 +16,11 @@
         <p>{{post.body}}</p>
     </div>
     <div>
+        <img src='20220719_111913.jpg' alt="">
+        {{post.image}}
+        
+    </div>
+    <div>
         <h6>| Date edited: {{post.date_edited}} |</h6>
     </div>
 </div>
