--- a/code/ashby/Django/blog/templates/blog/_form.html
+++ b/code/ashby/Django/blog/templates/blog/_form.html
@@ -1,7 +1,7 @@
 
 <div>
 <br>    
-    <form  action='{% url path %}' method="POST">
+    <form  action='{% url path %}' method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{form}}
         <button>{{button_text}}</button>
