--- a/code/ashby/Django/blog/templates/blog/edit.html
+++ b/code/ashby/Django/blog/templates/blog/edit.html
@@ -14,7 +14,7 @@
         <h3 style='display:flex; justify-content:center; margin: 0 auto' >Edit</h3>
         <div>
             <br>    
-                <form  action={% url 'blog:edit' post.id %} method="POST">
+                <form  action={% url 'blog:edit' post.id %} method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{form}}
                     <button>Edit Post</button>
