--- a/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
@@ -1,13 +1,11 @@
 {% extends 'main.html' %}
 
+{% block title %}Create Post{% endblock title %}
+
 {% block content %}
 <h3>Test at is best</h3>
+<h2>Post</h2>
 
-<div>
-    <a href="{% url 'create-post' %}">Create Post</a>
-</div>
-
-{{msg}}
 
 
 {% endblock content %}
