forms/models in admin

--- a/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
@@ -5,6 +5,14 @@
 {% block content %}
 <h3>Test at is best</h3>
 <h2>Post</h2>
+<div>
+    <form action="create/" method="POST">
+        {% csrf_token %}
+            {{form.as_p}}
+        <input type="submit" value="Create">
+    </form>
+
+</div>
 
 
 
