blogsposting/user/delete good

--- a/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
@@ -6,10 +6,10 @@
 <h3>Test at is best</h3>
 <h2>Post</h2>
 <div>
-    <form action="create/" method="POST">
+    <form action="" method="POST">
         {% csrf_token %}
             {{form.as_p}}
-        <input type="submit" value="Create">
+        <input type="submit" value="create">
     </form>
 
 </div>
