--- a/code/adam/Django/lab4blog/blog/templates/blog/index.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/index.html
@@ -5,7 +5,29 @@
 
 <div>
     <a href="{% url 'create-post' %}">Create Post</a>
+    <div>
+        {% for post in blogpost%}
+            <div>
+                <a href="{% url 'delete-post' post.id %}">Delete</a>
+                <a href="{% url 'delete-post' post.id %}">Delete</a>
+                <br>
+                <span>@{{post.user}}</span>
+
+                <h5>{{post.id}} | {{post.title}}</h5>
+                {% comment %}  {% endcomment %}
+                {% comment %}  {% endcomment %}
+                {% comment %} FINISH preseting blogpost on this page {% endcomment %}
+                {% comment %} finish update-view {% endcomment %}
+            </div>
+        
+        {% endfor %}
+    </div>
+
+
+
 </div>
+
+
 
 {{msg}}
 
