--- a/code/adam/Django/lab4blog/blog/templates/blog/login_register.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/login_register.html
@@ -7,14 +7,14 @@
 <h3>login page</h3>
 
 <div>
-    <form action="POST" action="">
+    <form method="POST" action="">
         {% csrf_token %}
         <label>Username:</label>        
         <input type="text" name="username" placeholder="Enter username" />
         <label>Password:</label>
         <input type="password" name="password" placeholder="Enter password"/>
         
-        <input type="submit" value="Login">
+        <input type="submit" value="login">
         
     </form>
 </div>
