--- a/code/adam/Django/lab4blog/templates/navbar.html
+++ b/code/adam/Django/lab4blog/templates/navbar.html
@@ -3,7 +3,12 @@
         <a href="{% url 'index' %}">
             <h2>&lArr;Home</h2>
         </a>
+
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %} ">Logout</a>
+        {% else %}
         <a href="{% url 'login' %}">Login</a>
+        {% endif %}
     </div>
     
 </div>    
