--- a/code/adam/Django/lab4blog/blog/templates/blog/index.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/index.html
@@ -8,8 +8,10 @@
     <div>
         {% for post in blogpost%}
             <div>
+                {% if request.user == post.user %}
+                <a href="{% url 'update-post' post.id %}">Update</a>
                 <a href="{% url 'delete-post' post.id %}">Delete</a>
-                <a href="{% url 'delete-post' post.id %}">Delete</a>
+                {% endif %}
                 <br>
                 <div>
                     <span>@{{post.user}}</span>
