--- a/code/adam/Django/lab4blog/blog/templates/blog/post.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/post.html
@@ -1,18 +1,43 @@
 {% extends 'main.html' %}
 {% block title %}{{blogpost.title}}{% endblock title %}
 {% block content %}
+<style>
+    .post-container {
+        display: grid;
+        grid-template-rows: 3fr 1fr;
 
-<h3>{{blogpost.title}}--{{blogpost.user}}</h3>
+    }
 
-<p>{{blogpost.body}}</p>
-<div>
-    {% for message in blog_messages %}
-    <div>
-        <small>@{{message.user}}  {{message.created|timesince}} ago </small>
-        
-        <p>{{message.body}}</p>
+</style>
+
+
+<div class="post-container">
+    <h3>{{blogpost.title}}</h3>
+    <h4>By:{{blogpost.user}}</h4>
+    <p>{{blogpost.body}}</p>
+
+    <hr>
+    <hr>
+
+    <div class="comment-body">
+        {% for message in blog_messages %}
+        <div>
+            <small>@{{message.user}}  {{message.created|timesince}} ago </small>
+            
+            <p>{{message.body}}</p>
+            <hr>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
 
+
+    {% if request.user.is_authenticated %}
+    <div class="comment-form">
+        <form method="POST" action="">
+            {% csrf_token %}
+            <input type="text" name="body" placeholder="Write your message here..."/>
+        </form>
+    </div>
+    {% endif %}
+</div>
 {% endblock content %}
