simple profile page, lists users posts.

--- a/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/create_post.html
@@ -3,8 +3,8 @@
 {% block title %}Create Post{% endblock title %}
 
 {% block content %}
-<h3>Test at is best</h3>
-<h2>Post</h2>
+
+<h2>New Post</h2>
 <div>
     <form action="" method="POST">
         {% csrf_token %}
