--- a/code/adam/Django/lab4blog/blog/templates/blog/index.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/index.html
@@ -22,7 +22,7 @@
                 {% endif %}
                 <br>
                 <div>
-                    <span>@{{post.user}}</span>
+                    <span><a href="{% url 'user-profile' post.user.id %}">@{{post.user}}</a></span>
 
                     <h5>{{post.id}} | <a href="{% url 'blogpost' post.id %}">{{post.title}}</a></h5>
                     <p>{{post.body}}</p>
