--- a/code/adam/Django/lab4blog/blog/templates/blog/post.html
+++ b/code/adam/Django/lab4blog/blog/templates/blog/post.html
@@ -4,7 +4,7 @@
 <style>
     .post-container {
         display: grid;
-        grid-template-rows: 3fr 1fr;
+        grid-template-columns: 3fr 1fr;
 
     }
 
@@ -12,13 +12,18 @@
 
 
 <div class="post-container">
-    <h3>{{blogpost.title}}</h3>
-    <h4>By:{{blogpost.user}}</h4>
-    <p>{{blogpost.body}}</p>
-
-    <hr>
-    <hr>
-
+    <div>
+        <h3>{{blogpost.title}}</h3>
+        <h4>By:{{blogpost.user}}</h4>
+        <p>{{blogpost.body}}</p>
+        <hr>
+        <hr>
+    </div>
+    
+    <div>
+        <h3>Recent Activity</h3>
+    </div>
+   
     <div class="comment-body">
         {% for message in blog_messages %}
         <div>
@@ -29,6 +34,10 @@
         </div>
         {% endfor %}
     </div>
+</div>    
+   
+<div>
+    
 
 
     {% if request.user.is_authenticated %}
@@ -40,4 +49,8 @@
     </div>
     {% endif %}
 </div>
+    
+
+
+
 {% endblock content %}
