--- a/code/adrian/django/labs/blog/templates/blog/index.html
+++ b/code/adrian/django/labs/blog/templates/blog/index.html
@@ -1,13 +1,11 @@
 {% extends 'blog/base.html' %}
 
 {% block title %}
-Create New Post
+Blogger
 {% endblock title %}
 
 {% block content %}
 
-<h1>Create New Post</h1>
-
-{% include 'blog/_form.html' with path="blog:create" button_text="Add"%}
+<h2>Blogger Home</h2>
 
 {% endblock content %}
