--- a/code/adrian/django/labs/blog/templates/blog/base.html
+++ b/code/adrian/django/labs/blog/templates/blog/base.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -7,7 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{% block title %}Blog{% endblock %}</title>
-		<link rel="stylesheet" href="{% static 'blog/styles.css' %}">
+		<style>
+			html{
+				background-image: linear-gradient(90deg, rgb(68, 144, 190),rgb(251, 254, 241));
+			}
+		</style>
 	</head>
 	<body>
     {% include 'blog/_navbar.html' %}
