updated lab_04 version 2

--- a/code/ashby/JavaScript/Lab_04 Dad_Joke/styles.css
+++ b/code/ashby/JavaScript/Lab_04 Dad_Joke/styles.css
@@ -9,5 +9,12 @@ h1,h2,h3,h4,h5,h6{
 
 .input{
     display:flex;
+    flex-direction: column;
     justify-content: center;
+}
+
+h4{
+    background-color: silver;
+    border-radius: 5px;
+    margin: 10px;
 }
