Updated Dad Joke - Lab 4, added search function

--- a/code/april/javascript/dad_joke/styles.css
+++ b/code/april/javascript/dad_joke/styles.css
@@ -4,11 +4,15 @@ html {
     text-align: center;
 }
 
-h2, h4 {
+h2, h4, label, li {
     color: gainsboro;
 }
 
 #new-joke-btn {
     background-color: gainsboro;
     color: lightslategray;
+}
+
+li {
+    margin: 1rem;
 }
