--- a/code/stacy/javascript/Lecture/Djangoscript/Mapr/mapr_app/templates/mapr_app/index.html
+++ b/code/stacy/javascript/Lecture/Djangoscript/Mapr/mapr_app/templates/mapr_app/index.html
@@ -26,7 +26,9 @@
 
     <script>
         const groupSelector = document.querySelector("#group-selector")
-        var map = L.map('map').setView([51.505, -0.09], 2);
+        let map = L.map('map').setView([0, 0], 2);
+        let layerGroup = L.layerGroup();
+        layerGroup.addTo(map);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
@@ -35,6 +37,7 @@
         fetch("/api/groups")
         .then(response => response.json())
         .then(data => {
+
             for(group of data.data) {
                 let option = document.createElement('option')
                 option.value = group.id
@@ -49,7 +52,17 @@
             if (!id) return;
             fetch(`/api/groups/${id}`)
             .then(response => response.json())
-            .then(data => console.log(data))
+            .then(data => {
+                layerGroup.clearLayers()
+                for(user of data.data)
+                layerGroup.addLayer(
+                    L.marker([user.location__latitude, user.location__longitude])
+                    .bindPopup(user.username)
+                    .openPopup()
+                    )
+                map.setView([0, 0], 2);
+
+            })
         })
 
 
